// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should render character counter correctly 1`] = `
<styled.div>
  <styled.label
    htmlFor="formname"
  >
    display
  </styled.label>
  <ForwardRef
    data-testid="name"
    id="formname"
    infoText="0/300 tekens"
    name="name"
    placeholder="placeholder"
    rows={2}
  />
</styled.div>
`;

exports[`<TextAreaInput /> should render character counter with value correctly 1`] = `
<styled.div>
  <styled.label
    htmlFor="formname"
  >
    display
  </styled.label>
  <ForwardRef
    data-testid="name"
    id="formname"
    infoText="4/300 tekens"
    name="name"
    placeholder="placeholder"
    rows={2}
    value="test"
  />
</styled.div>
`;

exports[`<TextAreaInput /> should render correctly 1`] = `
<styled.div>
  <styled.label
    htmlFor="formname"
  >
    display
  </styled.label>
  <ForwardRef
    data-testid="name"
    id="formname"
    name="name"
    placeholder="placeholder"
    rows={2}
  />
</styled.div>
`;
